--- a/gallery.html
+++ b/gallery.html
@@ -3,36 +3,78 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-	<title>IFM - BCS</title>
+	<title>IFM - CS</title>
 	<link rel="stylesheet" href="css/material-design-iconic-font.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<div id="shadow" onclick="closeMenu()"></div>
+	<audio src="music/suddenly.mp3" autopla></audio>
 	<header class="shadow-2dp">
-		<div class="logo"><a href="#">BCS Website</a></div>
-		<div style="margin-left: auto;margin-right:50px;"><a href="#contact" style="color: white">Contact us</a></div>
+		<a href="javascript:void(0);" class="btn btn-flat header-btn" style="align-self: center;" onclick="toggleMenu()"><i class="zmdi zmdi-menu"></i></a>
+		<div class="logo"><a href="index.html">CS IFM</a></div>
 	</header>
-	<header class="shadow-2dp last">
+	<nav class="shadow-2dp">
+		<div class="cover-photo placeholder-bg" style="height: 200px;"></div>
 		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About us</a></li>
-			<li><a href="#">Link 2</a></li>
-			<li><a href="#">Link 3</a></li>
-			<li><a href="#">Link 4</a></li>
-			<li><a href="#">Link 5</a></li>
-			<li><a href="#">Link 6</a></li>
-			<li class="active"><a href="#">Gallery</a></li>
+			<li><a href="index.html"><i class="zmdi zmdi-home"></i>Home</a></li>
+			<li><a href="about.html"><i class="zmdi zmdi-info-outline"></i>About us</a></li>
+			<li><a href="#"><i class="zmdi zmdi-accounts"></i>Staff</a></li>
+			<li><a href="#"><i class="zmdi zmdi-collection-item"></i>Courses</a></li>
+			<li class="active"><a href="#"><i class="zmdi zmdi-collection-image"></i>Gallery</a></li>
 		</ul>
-	</header>
+	</nav>
 	<div id="main">
 		<div id="content">
 			<section class="placeholder-bg layout-flex as-column center-center">
 				<br>
 				<h1 style="font-size: 35px">Gallery</h1>
-				
+				<p style="padding: 0 60px; font-size: 23px">
+					Her are some pics from varios areas of our course and students.
+				</p>
+				<!-- <br> -->
+				<a href="javascript:void(0);" onclick="playSlideShow()" class="btn btn-flat">PLAY SLIDESHOW</a>
+				<br>
+			</section>
+			<style>
+				img{
+					width: 33%;
+					height: 200px;
+					margin-right: 0.333%;
+					margin-bottom: 5px;
+					cursor: pointer;
+				}
+				img:hover{
+					transition: transform 0.25s ease-out;
+					transform: scale(1.06);
+					box-shadow: 0 0 10px 1px rgba(0,0,0,0.6);
+				}
+				@media all and (max-width: 600px){
+					img{
+						width: calc(50% - 4px);
+						margin: 2px 2px;
+					}
+				}
+			</style>
+			<section class="layout-flex wrap">
+				<img src="images/bcs.png" alt="">
+				<img src="images/bcs2.jpg" alt="">
+				<img src="images/bcs3.jpg" alt="">
+				<img src="images/bcs.png" alt="">
+				<img src="images/bcs2.jpg" alt="">
+				<img src="images/bcs3.jpg" alt="">
+				<img src="images/bcs.png" alt="">
+				<img src="images/bcs2.jpg" alt="">
+				<img src="images/bcs3.jpg" alt="">
 			</section>
 		</div>
 	</div>
+	<footer class="shadow-4dp">
+		<div class="copyright">
+			Copyright &copy; BCS IFM 2016.
+		</div>
+	</footer>
+	<script src="js/scripts.js"></script>
 </body>
 </html>
