--- a/index.html
+++ b/index.html
@@ -3,28 +3,31 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-	<title>IFM BCS</title>
+	<title>IFM CS</title>
 	<link rel="stylesheet" href="css/material-design-iconic-font.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<header class="shadow-2dp">
-		<div class="logo"><a href="#">BCS Website</a></div>
-		<div style="margin-left: auto;margin-right:50px;"><a href="#contact" style="color: white">Contact us</a></div>
+	<div id="shadow" class="layout-flex center-center as-column" onclick="closeMenu()">
+		<i class="zmdi zmdi-globe animated bounce infinite"></i>
+		<br>
+		<span class="animated infinite tada">loading....</span>
+	</div>
+	<header class="shadow-1d">
+		<a href="javascript:void(0);" class="btn btn-flat header-btn" style="align-self: center;" onclick="toggleMenu()"><i class="zmdi zmdi-menu"></i></a>
+		<div class="logo"><a href="#">CS IFM</a></div>
 	</header>
-	<header class="shadow-2dp last">
+	<nav class="shadow-1dp last">
+		<div class="cover-photo placeholder-bg" style="height: 200px;"></div>
 		<ul>
-			<li class="active"><a href="#">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="#">Link 2</a></li>
-			<li><a href="#">Link 3</a></li>
-			<li><a href="#">Link 4</a></li>
-			<li><a href="#">Link 5</a></li>
-			<li><a href="#">Link 6</a></li>
-			<li><a href="gallery.html">Gallery</a></li>
+			<li class="active"><a href="#"><i class="zmdi zmdi-home"></i>Home</a></li>
+			<li><a href="about.html"><i class="zmdi zmdi-info-outline"></i>About</a></li>
+			<li><a href="#"><i class="zmdi zmdi-accounts"></i>Staff</a></li>
+			<li><a href="#"><i class="zmdi zmdi-collection-item"></i>Courses</a></li>
+			<li><a href="gallery.html"><i class="zmdi zmdi-collection-image"></i>Gallery</a></li>
 		</ul>
-	</header>
+	</nav>
 	<div id="main">
 		<!-- <aside class="shadow-2d">
 			<ul>
@@ -36,24 +39,114 @@
 			</ul>
 		</aside> -->
 		<div id="content">
-			<section class="placeholder-bg layout-flex as-column center-center" style="width:95%;left:3.5%;margin-top: -10px; min-height: 300px;padding: 15px 0; margin-bottom: 50px;">
-				<br>
-				<h1 style="font-size: 35px">Welcome to the BCS department IFM</h1>
-				<p style="padding: 0 60px; font-size: 23px">Here you will learn about just why this is the right place for you or your loved ones to be,Chrome faded-ware Legba convenience store ablative drone receding grenade. Cartel drugs geodesic tank-traps physical bomb Shibuya dissident. San Francisco range-rover otaku nano-dolphin faded shanty town tanto artisanal. Man tattoo bicycle free-market post-carbon paranoid artisanal car j-pop. Cardboard rifle 3D-printed physical numinous bomb knife hacker wonton soup human assault courier. Math-urban construct BASE jump wonton soup Shib always contact us with your concerns and we will be more than eager to sort them out for you.</p>
-				<br><br>
+			<section class="placeholder-bg layout-flex as-column center-center" style="widt:95%;lef:3.5%;margin-top: -10px; min-height: 350px;padding: 15px 0; margin-bottom: 50px;background: url(images/bcs.png); background-size: cover;">
 			</section>
+			<!-- <center><p>wa</p></center> -->
+			<!-- <br> -->
+			<section class="layout-flex">
+				<div style="flex:1; min-height: 120px; margin-right:10px;padding-top: 0;">
+					<h2 class="center-text-on-less-lg" style="font-size: 30px; margin: 0;">Welcome to the CS department IFM</h2>
+					<p class="text-justify" style="padding: 10px; font-size: 21px">&emsp;Here you will learn about just why this is the right place for you or your loved ones to be,Chrome faded-ware Legba convenience store ablative drone receding grenade. Cartel drugs geodesic tank-traps physical bomb Shibuya dissident. San Francisco range-rover otaku nano-dolphin faded shanty town tanto artisanal.</p>
+					<br>
+					<h3 class="center-text-on-less-lg" style="font-size: 21px; margin: 0;">HIGHLIGHTS</h3>
+					<br><br>
+					<h5 class="no-margin" style="font-size: 18px;">Projects</h5>
+					<p class="center-text-on-less-lg text-justify" style="font-size: 21px">
+					&emsp;Some examples of outstanding work done by students, alumnis and our in college staff of the computer science department.
+					</p>
 
-			<br>
-			<section>
-				<h2>News feed</h2>
-				<hr class="divider">
+					<div class="row">
+						<div class="col col-4">
+							<div class="card">
+								<img src="images/pp.jpg" alt="Scholarnet image">
+								<div class="card-content">
+									<div class="caption">
+										<h3 class="no-margin">Scholarnet</h3>
+										<p class="no-margin">Knowledge sharing application built by freshman students 2016.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col col-4">
+							<div class="card">
+								<img src="images/bingbong.png" alt="Bingly Bongly image">
+								<div class="card-content">
+									<div class="caption">
+										<h3 class="no-margin">Bingly bongly</h3>
+										<p class="no-margin">A simple single layer game by a freshman in.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col col-4">
+							<div class="card">
+								Content 2 shown as 2 on this 2 position
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="list-group show-on-lg-only" style="flex:0.6; margin-left:60px;padding-left:30px;margin-top: -10px;border-left: 1px solid #ccc">
+					<h3 class="title">News &amp; Events</h3>
+
+					<div class="list">
+						<h3 class="title">News</h3>
+						<hr class="divider">
+
+						<div class="list-item">
+							<h3><a href="#">Career day win</a></h3>
+							<p>The department of computer science came out victorious during the recently held career day event courtesy of some....</p>
+						</div>
+
+						<div class="list-item">
+							<h3><a href="#">ICT Workshop</a></h3>
+							<p>The department of computer science and Information Technology were host to the innovative ICT workshop recently held at the college.</p>
+						</div>
+
+						<div><br><a href="#" class="right"><e>MORE NEWS...</em></a><br></div>
+					</div>
+
+					<div class="list">
+						<h3 class="title">Events</h3>
+						<hr class="divider">
+
+						<div class="list-item has-avatar">
+							<span class="avatar">
+								<span>22</span>
+								<span>JUN</span>
+							</span>
+							<h3><a href="#">End of semester exams</a></h3>
+							<p>The end of semestrer exams will start tomorrow asubuhi.</p>
+						</div>
+						<div class="list-item has-avatar">
+							<span class="avatar">
+								<span>15</span>
+								<span>JUL</span>
+							</span>
+							<h3><a href="#">Field work starts</a></h3>
+							<p>
+								iente totam odit expedita? Eius, labore com.
+							</p>
+						</div>
+						<div class="list-item has-avatar">
+							<span class="avatar">
+								<span>5</span>
+								<span>AUG</span>
+							</span>
+							<h3><a href="#">Post graduate entry</a></h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quas ullam debitis pariatur sap.</p>
+						</div>
+
+						<div><br><a href="#" class="right"><e>MORE EVENTS...</em></a><br></div>
+					</div>
+				</div>
 			</section>
 		</div>
-		<aside style="opacity: 0"></aside>
-		<aside class="shadow-2dp" style="position: fixed;top:0;right:0;padding: 0 15px;padding-top: 155px;">
-			<h2>News feed</h2>
-			<hr class="divider">
-		</aside>
 	</div>
+	<footer>
+		<div class="copyright">
+			Copyright &copy; BCS IFM 2016.
+		</div>
+	</footer>
+	<script src="js/scripts.js"></script>
 </body>
 </html>
