--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+	<meta name="theme-color" content="#4CAF50">
 	<title>IFM - CS</title>
 	<link rel="stylesheet" href="css/material-design-iconic-font.min.css">
 	<link rel="stylesheet" href="css/animate.css">
@@ -13,7 +14,7 @@
 	<audio src="music/suddenly.mp3" autopla></audio>
 	<header class="shadow-2dp">
 		<a href="javascript:void(0);" class="btn btn-flat header-btn" style="align-self: center;" onclick="toggleMenu()"><i class="zmdi zmdi-menu"></i></a>
-		<div class="logo"><a href="index.html">CS IFM</a></div>
+		<div class="logo"><a href="index.html">Computer Science IFM</a></div>
 	</header>
 	<nav class="shadow-2dp">
 		<div class="cover-photo placeholder-bg" style="height: 200px;"></div>
