--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+	<meta name="theme-color" content="#4CAF50">
 	<title>IFM CS</title>
 	<link rel="stylesheet" href="css/material-design-iconic-font.min.css">
 	<link rel="stylesheet" href="css/animate.css">
@@ -14,12 +15,12 @@
 		<br>
 		<span class="animated infinite tada">loading....</span>
 	</div>
-	<header class="shadow-1d">
+	<header class="shadow-2dp">
 		<a href="javascript:void(0);" class="btn btn-flat header-btn" style="align-self: center;" onclick="toggleMenu()"><i class="zmdi zmdi-menu"></i></a>
-		<div class="logo"><a href="#">CS IFM</a></div>
+		<div class="logo"><a href="#">Computer Science IFM</a></div>
 	</header>
-	<nav class="shadow-1dp last">
-		<div class="cover-photo placeholder-bg" style="height: 200px;"></div>
+	<nav class="shadow-2dp last">
+		<div class="cover-photo placeholder-b" style="height: 200px;"></div>
 		<ul>
 			<li class="active"><a href="#"><i class="zmdi zmdi-home"></i>Home</a></li>
 			<li><a href="about.html"><i class="zmdi zmdi-info-outline"></i>About</a></li>
@@ -39,48 +40,114 @@
 			</ul>
 		</aside> -->
 		<div id="content">
-			<section class="placeholder-bg layout-flex as-column center-center" style="widt:95%;lef:3.5%;margin-top: -10px; min-height: 350px;padding: 15px 0; margin-bottom: 50px;background: url(images/bcs.png); background-size: cover;">
+			<section class="placeholder-bg layout-flex as-column center-center" style="widt:95%;lef:3.5%;margin-top: -10px; min-height: 350px;padding: 15px 0; margin-bottom: 50px;background: url(images/bcs.png); background-size: cover; background-position: top center;">
 			</section>
 			<!-- <center><p>wa</p></center> -->
 			<!-- <br> -->
 			<section class="layout-flex">
-				<div style="flex:1; min-height: 120px; margin-right:10px;padding-top: 0;">
+				<div class="full-width-on-sm" style="flex:1; min-height: 120px; margin-righ:10px;padding-top: 0;padding: 0;">
 					<h2 class="center-text-on-less-lg" style="font-size: 30px; margin: 0;">Welcome to the CS department IFM</h2>
-					<p class="text-justify" style="padding: 10px; font-size: 21px">&emsp;Here you will learn about just why this is the right place for you or your loved ones to be,Chrome faded-ware Legba convenience store ablative drone receding grenade. Cartel drugs geodesic tank-traps physical bomb Shibuya dissident. San Francisco range-rover otaku nano-dolphin faded shanty town tanto artisanal.</p>
+					<p class="text-justify" style="padding: 20px; font-size: 21px">&emsp;At computer science IFM we beleive that learn about just why this is the right place for you or your loved ones to be,Chrome faded-ware Legba convenience store ablative drone receding grenade. Cartel drugs geodesi.</p>
 					<br>
 					<h3 class="center-text-on-less-lg" style="font-size: 21px; margin: 0;">HIGHLIGHTS</h3>
 					<br><br>
-					<h5 class="no-margin" style="font-size: 18px;">Projects</h5>
+					<h5 class="no-margin center-text-on-less-lg" style="font-size: 18px;">Projects</h5>
 					<p class="center-text-on-less-lg text-justify" style="font-size: 21px">
 					&emsp;Some examples of outstanding work done by students, alumnis and our in college staff of the computer science department.
 					</p>
 
 					<div class="row">
+						<div class="col col-6">
+							<div class="card">
+								<img src="images/pp.jpg" alt="Scholarnet image">
+								<div class="card-content">
+									<div class="layout-flex">
+										<div class="caption flex">
+											<h3 class="no-margin">Scholarnet</h3>
+											<p class="no-margin">Knowledge sharing application built by freshman students 2016.</p>
+										</div>
+										<div class="layout-flex end-end" style="width: 60px;">
+											<a href="#">view</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col col-6">
+							<div class="card">
+								<img src="images/wasongo.jpg" alt="Bingly Bongly image">
+								<div class="card-content">
+									<div class="layout-flex">
+										<div class="caption flex">
+											<h3 class="no-margin">Bingly bongly</h3>
+											<p class="no-margin">A simple single layer game by a freshman in.</p>
+										</div>
+										<div class="layout-flex end-end" style="width: 60px;">
+											<a href="#">view</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<br><br>
+					<h5 class="no-margin center-text-on-less-lg" style="font-size: 18px;">Alumni</h5>
+					<p class="center-text-on-less-lg text-justify" style="font-size: 21px">
+					&emsp;Students grauating with a bachelor degree at IFM have been quite successfull out in the industry, here are some of the few.
+					</p>
+
+					<div class="row" hidde>
 						<div class="col col-4">
 							<div class="card">
 								<img src="images/pp.jpg" alt="Scholarnet image">
 								<div class="card-content">
-									<div class="caption">
-										<h3 class="no-margin">Scholarnet</h3>
-										<p class="no-margin">Knowledge sharing application built by freshman students 2016.</p>
+									<div class="layout-flex">
+										<div class="caption flex">
+											<h3 class="no-margin">Perfect Nelson</h3>
+											<p class="no-margin">Since graduating from IFM in June 2007, Perfect has started a software company grown it to a net worth of over twenty million and employeed and gotten mentioned as an upcoming millionaire by forbes.</p>
+										</div>
+										<div class="layout-flex end-end">
+											<a href="#">view</a>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col col-4">
 							<div class="card">
-								<img src="images/bingbong.png" alt="Bingly Bongly image">
+								<img src="images/bcs4.jpg" alt="Bingly Bongly image">
 								<div class="card-content">
-									<div class="caption">
-										<h3 class="no-margin">Bingly bongly</h3>
-										<p class="no-margin">A simple single layer game by a freshman in.</p>
+									<div class="layout-flex">
+										<div class="caption flex">
+											<h3 class="no-margin">Anne Worsty</h3>
+											<p class="no-margin">Her movement <a href="twitter.com/tags/#sheCodesForChange">#sheCodesForChange</a> has gained huge popularity on twitter and their company has hosted over two hundred events all over the country.</p>
+										</div>
+										<div class="layout-flex end-end">
+											<a href="#">view</a>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col col-4">
 							<div class="card">
-								Content 2 shown as 2 on this 2 position
+								<img src="images/koze.jpg" alt="Scholarnet image">
+								<div class="card-content">
+									<div class="layout-flex">
+										<div class="caption flex">
+											<h3 class="no-margin">
+												Koze Jumanne
+											</h3>
+											<p class="no-margin">
+												Moview C.E.O Koze has his app into two countries with over two thousand downloads.
+											</p>
+										</div>
+										<div class="layout-flex end-end">
+											<a href="#">view</a>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
