--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div id="shadow" class="layout-flex center-center as-column" onclick="closeMenu()">
+	<div id="shadow" class="layout-flex center-center as-column" onclick="removeShadow()">
 		<i class="zmdi zmdi-globe animated bounce infinite"></i>
 		<br>
 		<span class="animated infinite tada">loading....</span>
 	</div>
+	<i class="zmdi shadow-closer" onclick="removeShadow()"></i>
 	<header class="shadow-2dp">
 		<a href="javascript:void(0);" class="btn btn-flat header-btn" style="align-self: center;" onclick="toggleMenu()"><i class="zmdi zmdi-menu"></i></a>
 		<div class="logo"><a href="#">Computer Science IFM</a></div>
@@ -24,7 +25,6 @@
 		<ul>
 			<li class="active"><a href="#"><i class="zmdi zmdi-home"></i>Home</a></li>
 			<li><a href="about.html"><i class="zmdi zmdi-info-outline"></i>About</a></li>
-			<li><a href="#"><i class="zmdi zmdi-accounts"></i>Staff</a></li>
 			<li><a href="#"><i class="zmdi zmdi-collection-item"></i>Courses</a></li>
 			<li><a href="gallery.html"><i class="zmdi zmdi-collection-image"></i>Gallery</a></li>
 		</ul>
@@ -40,7 +40,7 @@
 			</ul>
 		</aside> -->
 		<div id="content">
-			<section class="placeholder-bg layout-flex as-column center-center" style="widt:95%;lef:3.5%;margin-top: -10px; min-height: 350px;padding: 15px 0; margin-bottom: 50px;background: url(images/bcs.png); background-size: cover; background-position: top center;">
+			<section id="home-banner" class="placeholder-bg layout-flex as-column center-center">
 			</section>
 			<!-- <center><p>wa</p></center> -->
 			<!-- <br> -->
@@ -58,32 +58,34 @@
 
 					<div class="row">
 						<div class="col col-6">
-							<div class="card">
-								<img src="images/pp.jpg" alt="Scholarnet image">
+							<div class="card" data-caption="Tucheze">
+								<img src="images/tucheze.jpg" alt="Tucheze">
 								<div class="card-content">
 									<div class="layout-flex">
 										<div class="caption flex">
-											<h3 class="no-margin">Scholarnet</h3>
-											<p class="no-margin">Knowledge sharing application built by freshman students 2016.</p>
+											<h3 class="no-margin">Tucheze</h3>
+											<p class="no-margin"><span>&emsp;</span>For their final year project, long time friends Juma and Stacy decided to go in a completely different direction from what is considered the norm, they decided to work on something to capture young children away from useless games, so they created an educative game experience where a child could enjoy and still get educated, how cool is that?</p>
 										</div>
 										<div class="layout-flex end-end" style="width: 60px;">
-											<a href="#">view</a>
+											<a href="javascript:void(0);">view</a>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col col-6">
-							<div class="card">
-								<img src="images/wasongo.jpg" alt="Bingly Bongly image">
+							<div class="card" data-caption="Mass Appeal">
+								<img src="images/mario.jpg" alt="Mass appeal image">
 								<div class="card-content">
 									<div class="layout-flex">
 										<div class="caption flex">
-											<h3 class="no-margin">Bingly bongly</h3>
-											<p class="no-margin">A simple single layer game by a freshman in.</p>
+											<h3 class="no-margin">Mass Appeal</h3>
+											<p class="no-margin"><span>&emsp;</span>
+												Just after completing the advanced web technologies course, third year student Jules Bama decided to challenge himself by build a web version of his favorite childhood game super mario after adding in some modern flair, it turned out to be quite fun and addictive and has since then gained him so much popularity among his peers.
+											</p>
 										</div>
 										<div class="layout-flex end-end" style="width: 60px;">
-											<a href="#">view</a>
+											<a href="javascript:void(0);">view</a>
 										</div>
 									</div>
 								</div>
@@ -94,45 +96,45 @@
 					<br><br>
 					<h5 class="no-margin center-text-on-less-lg" style="font-size: 18px;">Alumni</h5>
 					<p class="center-text-on-less-lg text-justify" style="font-size: 21px">
-					&emsp;Students grauating with a bachelor degree at IFM have been quite successfull out in the industry, here are some of the few.
+					&emsp;Students graduating from IFM have been quite successfull out in the industry, here are some of the few.
 					</p>
 
-					<div class="row" hidde>
+					<div class="row">
 						<div class="col col-4">
-							<div class="card">
-								<img src="images/pp.jpg" alt="Scholarnet image">
+							<div class="card" data-caption="Perfect Nelson">
+								<img src="images/perfect2.jpg" alt="Perfect Nelson image">
 								<div class="card-content">
 									<div class="layout-flex">
 										<div class="caption flex">
 											<h3 class="no-margin">Perfect Nelson</h3>
-											<p class="no-margin">Since graduating from IFM in June 2007, Perfect has started a software company grown it to a net worth of over twenty million and employeed and gotten mentioned as an upcoming millionaire by forbes.</p>
+											<p class="no-margin"><span>&emsp;</span>Since graduating from IFM in June 2007, Perfect has started a software company grown it to a net worth of over sixty million, employed over a hundred employees, delivered on over two hundred and fifty contracts and gotten mentioned as an upcoming millionaire by forbes. We think this is pretty impressive. Way to go Perfect.</p>
 										</div>
 										<div class="layout-flex end-end">
-											<a href="#">view</a>
+											<a href="javascript:void(0);">view</a>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col col-4">
-							<div class="card">
-								<img src="images/bcs4.jpg" alt="Bingly Bongly image">
+							<div class="card" data-caption="Annabel Kapama">
+								<img src="images/anne2.jpg" alt="Annabel Kapama's image">
 								<div class="card-content">
 									<div class="layout-flex">
 										<div class="caption flex">
-											<h3 class="no-margin">Anne Worsty</h3>
-											<p class="no-margin">Her movement <a href="twitter.com/tags/#sheCodesForChange">#sheCodesForChange</a> has gained huge popularity on twitter and their company has hosted over two hundred events all over the country.</p>
+											<h3 class="no-margin">Anande Sawe</h3>
+											<p class="no-margin"><span>&emsp;</span>Anne joined forces with her high school best friend and raptured the world of women in tech, their movement <a target="_blank" href="twitter.com/tags/#sheCodesForChange">#sheCodesForChange</a> has gained huge popularity on twitter and their company has hosted over two hundred events all over the country, reaching over five hundred thousand girls. She is considered the nation's tech Florence Nightingale.</p>
 										</div>
 										<div class="layout-flex end-end">
-											<a href="#">view</a>
+											<a href="javascript:void(0);">view</a>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col col-4">
-							<div class="card">
-								<img src="images/koze.jpg" alt="Scholarnet image">
+							<div class="card" data-caption="Ilakoze Jumanne">
+								<img src="images/koze.jpg" alt="Koze's image">
 								<div class="card-content">
 									<div class="layout-flex">
 										<div class="caption flex">
@@ -140,11 +142,12 @@
 												Koze Jumanne
 											</h3>
 											<p class="no-margin">
-												Moview C.E.O Koze has his app into two countries with over two thousand downloads.
+												<span>&emsp;</span>
+												Moview C.E.O IlaKoze Jumanne or Koze for short decided to teach himself how to make android applications taking advantage of the Java skills he learnt when he was at IFM, his very first app Moview has grown into two countries(Kenya and Tanzania) and has had over five thousand downloads since it was launched early last year.
 											</p>
 										</div>
 										<div class="layout-flex end-end">
-											<a href="#">view</a>
+											<a href="javascript:void(0);">view</a>
 										</div>
 									</div>
 								</div>
@@ -152,7 +155,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="list-group show-on-lg-only" style="flex:0.6; margin-left:60px;padding-left:30px;margin-top: -10px;border-left: 1px solid #ccc">
+				<div id="home-right-nav" class="list-group show-on-lg-only">
 					<h3 class="title">News &amp; Events</h3>
 
 					<div class="list">
@@ -204,6 +207,48 @@
 						</div>
 
 						<div><br><a href="#" class="right"><e>MORE EVENTS...</em></a><br></div>
+					</div>
+					<br><br>
+					<h3 class="title">Contact us:</h3>
+
+					<div class="list">
+						<h3 class="title">Formal contacts:</h3>
+						<hr class="divider">
+						<div class="layout-flex">
+							<div class="list-item has-avatar-small">
+								<span class="avatar small circle">
+									<span class="zmdi zmdi-phone"></span>
+								</span>
+								<h3><a href="#">Phone</a></h3>
+								<p>+255 - 717138056</p>
+							</div>
+							<span>&emsp;</span>
+							<div class="list-item has-avatar-small">
+								<span class="avatar small circle">
+									<span class="zmdi zmdi-email"></span>
+								</span>
+								<h3><a href="#">Email</a></h3>
+								<p>bcsifm@gmail.com</p>
+							</div>
+						</div>
+					</div>
+					<div class="list">
+						<h3 class="title">Social networks</h3>
+						<hr class="divider">
+						<div class="layout-flex social-icons">
+							<a title="Like our facebook page" target="_blank" href="facebook.com/ifmbcs" class="avatar fb">
+								<span class="zmdi zmdi-facebook"></span>
+							</a>
+							<a title="Follow us on twitter" target="_blank" href="twitter.com/ifmbcs" class="avatar twitter">
+								<span class="zmdi zmdi-twitter"></span>
+							</a>
+							<a title="Follow us on instagram" target="_blank" href="instagram.com/ifmbcs" class="avatar insta">
+								<span class="zmdi zmdi-instagram"></span>
+							</a>
+							<a title="Follow us on google plus" target="_blank" href="plus.google.com/ifmbcs" class="avatar gplus">
+								<span class="zmdi zmdi-google-plus"></span>
+							</a>
+						</div>
 					</div>
 				</div>
 			</section>
