--- a/about.html
+++ b/about.html
@@ -41,9 +41,9 @@
 			</section>
 			<br><br><br><br>
 			<section>
-				<div class="center-text-on-less-lg layout-flex v-center">
+				<div class="center-text-on-less-lg layout-flex v-center padding-h-on-sm">
 					<div>
-						<h3 class="section-title">Courses</h3>
+						<h3 class="section-title inset-on-sm">Courses</h3>
 						<span class="section-sub">5 samples</span>
 					</div>
 					<div class="layout-flex center-center" style="margin-left: auto; margin-right: 1px; font-size: 20px; ">
